# climbxmigcwbc

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  XLOG_USAGE.md  deploy.bash  install.sh  publish_release.sh  pyproject.toml  requirements.txt  setup.py  startup_nav_real.sh  startup_nav_sim.sh
docs/: deployment_gmr_routes_20260721.md
downloads/hric_msgs/: CMakeLists.txt  package.xml
downloads/hric_msgs/msg/: FootPoint.msg
downloads/ros2_bridge_msgs/: CMakeLists.txt  package.xml
downloads/ros2_bridge_msgs/msg/: ArmCtrl.msg  ArmStatus.msg  HeadCtrl.msg  HeadStatus.msg  ImuStatus.msg  LegCtrl.msg  LegStatus.msg  MotorCtrl.msg  MotorStatus.msg  RobotState.msg  WaistCtrl.msg  WaistStatus.msg
logs/: log_analyze.ipynb
scripts/: nav_target_pub.py
src/xmigcs/: __init__.py  joystick_bridge_node.py  rl_control_node.py  rl_control_node_sim.py
src/xmigcs/FSM/: fsm_base.py  robot_fsm.py
src/xmigcs/common/: body_id_map.py  contact_detect.py  control_flag.py  dynamic_model.py  func_sp_trans_evt_analytic.py  func_sp_trans_evt_opt.py  hric_server_adapter.py  joystick.py  robot_data.py  robot_interface.py  stdin_keyboard_control.py  xbox_control.py
src/xmigcs/config/: control_tool.yaml  dex_config.yaml  tiangong3.urdf
src/xmigcs/utils/: cmd_filter.py  data_analysis.ipynb  exp_filter.py  file_logger.py  logging_utils.py  mirror_info.py  sym_tiangong_23dof_matrix_numpy.py  (+4 more)
test/: compare_dex_versions.py  compare_optimized_dex_vs_new.py  compare_optimized_versions.py  performance_comparison.py  test_all_xbox_mappings.py  test_ankle_convert.py  test_ankle_performance.py
(+165 files in other folders)
